fix: Cards spacing

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -37,13 +37,8 @@ hr {
   color: #7d97ad;
 }
 
-.featured p {
+.card-title {
   text-transform: uppercase;
   text-align: center;
   color: #2d3c49;
-/*  font-size: .9em;*/
-}
-
-.title {
-  margin: 8px 0px 0px 0px;
 }
